--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
-     "scripts": {
+  "scripts": {
     "prepare": "is-ci || npx husky install",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
@@ -12,7 +11,6 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GSG-G13/GYM.git"
@@ -25,25 +23,24 @@
   },
   "homepage": "https://github.com/GSG-G13/GYM#readme",
   "dependencies": {
-       "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "is-ci": "^3.0.1",
     "jsonwebtoken": "^9.0.0"
-
   },
   "devDependencies": {
- 
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
@@ -52,6 +49,5 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
-  
   }
 }
