--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "is-ci || npx husky install",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "test": "jest"
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -28,10 +26,10 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "is-ci": "^3.0.1",
     "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -41,11 +39,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "prettier": "^2.8.8",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
