--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.2.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
